gccida/g3/loc_descriptor_from_tree
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/loc_descriptor_from_tree/src/dwarf2out.c:8476:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *inner_reference; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/loc_descriptor_from_tree/src/dwarf2out.c:8490:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/loc_descriptor_from_tree/src/dwarf2out.c:8493:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v44; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/loc_descriptor_from_tree/src/dwarf2out.c:8530:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v81; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/loc_descriptor_from_tree/src/dwarf2out.c:8539:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode pmode; // [rsp+8h] [rbp-60h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/loc_descriptor_from_tree/src/dwarf2out.c:9049:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 8292, "loc_descriptor_from_tree"); 
                             ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/loc_descriptor_from_tree/src/obj/dwarf2out.o] Error 1
